# three-high-sector-evaluation

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
.github/workflows/: test.yml
config/: model.json  sectors.json
data/sample/: sector_scores.csv
docs/: architecture.md  data-policy.md  github-release.md  methodology.md
src/three_high_model/: __init__.py  config.py  model.py  repository.py
tests/: test_model.py  test_repository.py  test_server.py
web/: app.js  index.html  styles.css
