[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "three-high-sector-evaluation"
version = "0.1.0"
description = "A research model for evaluating A-share AI computing industry-chain sectors."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "three-high-sector-evaluation contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.9,<1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
